; ModuleID = '/home/carl/AnghaBench/mpv/stream/extr_stream_bluray.c_bluray_stream_fill_buffer.c'
source_filename = "/home/carl/AnghaBench/mpv/stream/extr_stream_bluray.c_bluray_stream_fill_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.bluray_priv_s* }
%struct.bluray_priv_s = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i8*, i32)* @bluray_stream_fill_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bluray_stream_fill_buffer(%struct.TYPE_4__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.bluray_priv_s*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.bluray_priv_s*, %struct.bluray_priv_s** %10, align 8
  store %struct.bluray_priv_s* %11, %struct.bluray_priv_s** %7, align 8
  br label %12

12:                                               ; preds = %18, %3
  %13 = load %struct.bluray_priv_s*, %struct.bluray_priv_s** %7, align 8
  %14 = getelementptr inbounds %struct.bluray_priv_s, %struct.bluray_priv_s* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @bd_get_event(i32 %15, i32* %8)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %12
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %20 = call i32 @handle_event(%struct.TYPE_4__* %19, i32* %8)
  br label %12

21:                                               ; preds = %12
  %22 = load %struct.bluray_priv_s*, %struct.bluray_priv_s** %7, align 8
  %23 = getelementptr inbounds %struct.bluray_priv_s, %struct.bluray_priv_s* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i8*, i8** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @bd_read(i32 %24, i8* %25, i32 %26)
  ret i32 %27
}

declare dso_local i64 @bd_get_event(i32, i32*) #1

declare dso_local i32 @handle_event(%struct.TYPE_4__*, i32*) #1

declare dso_local i32 @bd_read(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
